--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
             android:text="@string/city_of_ideas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:id="@+id/loadingTitle" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:textSize="36sp" android:textColor="@android:color/black"/>
@@ -19,35 +19,35 @@
             android:layout_width="0dp"
             app:srcCompat="@drawable/logo"
             android:id="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loadingTitle" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_height="416sp"/>
+            android:layout_height="436dp"/>
     <TextView
             android:text="@string/copyright"
             android:layout_width="wrap_content"
             android:layout_height="24dp"
-            android:id="@+id/textView2"
+            android:id="@+id/loadingCopyright"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar2" app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintTop_toBottomOf="@+id/loadingSpinner" app:layout_constraintHorizontal_bias="0.497"
             android:layout_marginTop="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <ProgressBar
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/progressBar2"
+            android:id="@+id/loadingSpinner"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" android:progressTint="@android:color/holo_green_dark"
+            app:layout_constraintTop_toBottomOf="@+id/loadingQuote" android:progressTint="@android:color/holo_green_dark"
             android:progressDrawable="@android:drawable/btn_star_big_on"
     />
     <TextView
             android:text="@string/samen_werken_aan_een_ide_e_ale_wereld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView3"
+            android:id="@+id/loadingQuote"
             app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:textSize="18sp"/>
