--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:id="@+id/treeHome"
             app:layout_constraintTop_toBottomOf="@+id/loadingTitle" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_height="436dp" android:contentDescription="@string/homeimage"/>
+            android:layout_height="436dp" android:contentDescription="@string/home_image"/>
     <TextView
             android:text="@string/copyright"
             android:layout_width="wrap_content"
