--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginActivity"
+        tools:context=".activitties.LoginActivity"
         android:background="@drawable/trees">
 
     <TextView
@@ -23,7 +23,7 @@
             android:text="@string/startup_register_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/registerBtn"
+            android:id="@+id/loginRegisterBtn"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/loginLL"
             app:layout_constraintEnd_toEndOf="@+id/loginLL" app:layout_constraintStart_toStartOf="@+id/loginLL"/>
