--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".RegisterActivity"
+        tools:context=".activitties.RegisterActivity"
         android:background="@drawable/trees">
 
     <TextView
@@ -87,7 +87,7 @@
                 android:text="@string/register_btn"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/loginBtn"
+                android:id="@+id/registerBtn"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_marginTop="24dp" android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
