--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,5 +8,25 @@
                 android:id="@+id/nav_home"
                 android:icon="@drawable/ic_menu_home"
                 android:title="@string/menu_home"/>
+        <item
+                android:id="@+id/nav_qr"
+                android:icon="@drawable/ic_menu_qr"
+                android:title="@string/menu_qr"/>
+        <item
+                android:id="@+id/nav_ideations"
+                android:icon="@drawable/ic_menu_ideations"
+                android:title="@string/menu_ideation"/>
+        <item
+                android:id="@+id/nav_questionnaires"
+                android:icon="@drawable/ic_menu_questionnaires"
+                android:title="@string/menu_questionnaires"/>
+        <item
+                android:id="@+id/nav_info"
+                android:icon="@drawable/ic_menu_info"
+                android:title="@string/menu_info"/>
+        <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_menu_settings"
+                android:title="@string/menu_settings"/>
     </group>
 </menu>
