--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#187f1a</color>
-    <color name="colorPrimaryDark">#166b18</color>
+    <color name="colorPrimaryDark">#19781B</color>
     <color name="colorAccent">#239B27</color>
 
     <color name="black_overlay">#66000000</color>
