--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
         tools:context=".activities.MainActivity">
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/mainContent">
-
+            android:layout_height="match_parent"
+            android:id="@+id/mainContent">
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
