--- a/app/src/main/res/layout/project_list_item.xml
+++ b/app/src/main/res/layout/project_list_item.xml
@@ -44,7 +44,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/projectImage"
             app:layout_constraintEnd_toEndOf="@+id/projectImage"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/projectImage"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/projectImage"
             android:id="@+id/constraintLayout" app:layout_constraintVertical_bias="0.0">
 
         <TextView
@@ -88,28 +88,27 @@
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         <TextView
-                android:text="@string/project_list_shares"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:id="@+id/projectListShares"
-                android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/projectListPhase"
-                android:drawableStart="@drawable/ic_share"
-                android:drawablePadding="3dp"/>
-        <TextView
                 android:text="@string/project_list_ideas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/projectListIdeas"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/projectListPhase"
                 android:drawableStart="@drawable/ic_menu_ideations"
-                android:drawablePadding="3dp"/>
+                android:drawablePadding="3dp" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginTop="8dp"/>
+        <TextView
+                android:text="@string/project_list_comments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/projectListComments"
+                android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@+id/projectListPhase"
+                android:drawableStart="@drawable/ic_comment"
+                android:drawablePadding="3dp"
+                android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
