--- a/app/src/main/res/layout/project_list_item.xml
+++ b/app/src/main/res/layout/project_list_item.xml
@@ -1,50 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content">
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:srcCompat="@tools:sample/avatars[2]"
-            android:id="@+id/projectImage"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/project_list_project_img_dsc"/>
-
+                                                   android:layout_height="wrap_content"
+                                                   android:id="@+id/projectListCLParent"
+android:background="@color/colorCard">
     <TextView
             android:text="@string/project_list_project_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/projectListName" app:layout_constraintStart_toStartOf="@+id/projectImage"
+            android:id="@+id/projectListName" app:layout_constraintStart_toStartOf="@+id/projectListCLParent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/projectImage" android:textSize="24sp" android:textStyle="bold"/>
+            app:layout_constraintTop_toTopOf="@+id/projectListCLParent" android:textSize="18sp" android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
+    <TextView
+            android:text="@string/project_list_project_goal_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/projectListGoal" app:layout_constraintStart_toStartOf="@+id/projectListCLParent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/projectListName" android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
+
     <TextView
             android:text="@string/project_list_project_status_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/projectListStatus" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-            app:layout_constraintEnd_toEndOf="@+id/projectImage" android:layout_marginEnd="16dp"
-            android:textSize="18sp"/>
-    <View
-            android:id="@+id/divider"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/black_overlay"
-            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
-            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>
+            android:id="@+id/projectListStatus" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/projectListGoal"
+            app:layout_constraintEnd_toEndOf="@+id/projectListCLParent" android:layout_marginEnd="8dp"
+            android:textSize="18sp"
+            android:textStyle="italic"/>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/projectImage"
-            app:layout_constraintEnd_toEndOf="@+id/projectImage"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/projectImage"
+            app:layout_constraintStart_toStartOf="@+id/projectListCLParent"
+            app:layout_constraintEnd_toEndOf="@+id/projectListCLParent"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/projectListStatus"
+            android:layout_marginTop="8dp"
+            android:background="@color/white"
             android:id="@+id/constraintLayout" app:layout_constraintVertical_bias="0.0">
 
         <TextView
@@ -53,7 +51,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/projectListPhase" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:textSize="18sp" android:textStyle="bold"/>
+                app:layout_constraintTop_toTopOf="parent" android:textSize="18sp" android:textStyle="bold"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"/>
         <View
                 android:id="@+id/divider2"
                 android:layout_width="0dp"
