--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#187f1a</color>
     <color name="colorPrimaryDark">#19781B</color>
     <color name="colorAccent">#239B27</color>
-
-    <color name="black_overlay">#66000000</color>
+    <color name="colorCard">#D9FFD1</color>
+    <color name="black_overlay">#660000</color>
+    <color name="white">#ffffff</color>
 </resources>
