--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/projectListFilterTV" app:layout_constraintEnd_toStartOf="@+id/projectListFilterSP"
                 android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="16dp" android:textSize="18sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
