There was a color that was bothering me. It's gone now.

--- a/app/src/main/res/layout/project_list_item.xml
+++ b/app/src/main/res/layout/project_list_item.xml
@@ -58,7 +58,7 @@ android:background="@color/colorCard">
                 android:id="@+id/divider"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:background="#A2E088"
+                android:background="@color/divider"
                 app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                 app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                 app:layout_constraintHorizontal_bias="0.0"
