--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorCard">#D9FFD1</color>
     <color name="black_overlay">#660000</color>
     <color name="white">#ffffff</color>
+    <color name="divider">#88B971</color>
 </resources>
