--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -8,13 +8,13 @@
     <TextView
 
             android:text="@string/projecttitle"
-            android:layout_width="0dp"
-            android:layout_height="30dp" android:id="@+id/projectTitle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="1.0"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/projectTitle"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
     <TextView
-            android:text="Huidige Fase"
+            android:text="@string/huidige_fase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/curPhase"
@@ -22,9 +22,9 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/projectTitle"
-            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="10dp"/>
+            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"/>
     <TextView
-            android:text="PhaseName"
+            android:text="@string/phasename"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/curPhase2"
@@ -38,9 +38,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="@+id/projectView"
             app:layout_constraintTop_toBottomOf="@+id/curPhase2"
-            android:text="Progress"
+            android:text="@string/progress"
             android:id="@+id/textView2"
-            android:layout_marginLeft="3dp"/>
+            android:layout_marginStart="8dp"/>
     <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
@@ -48,31 +48,72 @@
             android:id="@+id/projectProgress"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginStart="3dp" android:layout_marginEnd="3dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginStart="3dp" android:layout_marginEnd="3dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
     <TextView
-            android:text="Start van het project:"
+            android:text="@string/dateformat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/labelStart" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="3dp" app:layout_constraintTop_toBottomOf="@+id/projectProgress"
-            android:layout_marginTop="20dp"/>
+            android:id="@+id/valueStart"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/projectProgress"
+            android:layout_marginTop="5dp"/>
     <TextView
-            android:text="Einde van het project:"
+            android:text="@string/dateformat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/labelEnd" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="3dp"
-            app:layout_constraintTop_toBottomOf="@+id/labelStart" android:layout_marginTop="10dp"/>
+            android:id="@+id/valueEnd"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/projectProgress"
+            android:layout_marginTop="5dp"/>
+    <Spinner
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner" android:dropDownWidth="match_parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/valueStart"
+            android:layout_marginTop="10dp"/>
     <TextView
-            android:text="--/--/--"
+            android:text="TextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="154dp"
-            tools:layout_editor_absoluteX="348dp" android:id="@+id/valueStart"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/valuePhaseTitle"
+            app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="175dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="177dp"
+            app:layout_constraintHorizontal_bias="1.0"/>
+    <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp" app:srcCompat="@drawable/ic_menu_home"
+            android:id="@+id/imageView2"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+    <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp" app:srcCompat="@drawable/finish"
+            android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
     <TextView
-            android:text="--/--/--"
+            android:text="Einde fase: "
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="182dp"
-            tools:layout_editor_absoluteX="347dp" android:id="@+id/valueEnd"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="8dp"/>
+    <TextView
+            android:text="Start fase: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/valuePhaseTitle" android:layout_marginTop="8dp"/>
+    <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:name="com.spanishinquisition.treecompany.fragments.ModuleForPhase"
+            android:id="@+id/fragment2"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
