--- a/app/src/main/res/layout/idea_list_item.xml
+++ b/app/src/main/res/layout/idea_list_item.xml
@@ -10,7 +10,7 @@
             android:text="TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/IdeaTitel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:id="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:background="#A39D9D" android:textSize="18sp" android:textColor="#000000"/>
@@ -19,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="18dp"
             android:id="@+id/IdeaText"
-            app:layout_constraintTop_toBottomOf="@+id/IdeaTitel" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
             android:textStyle="bold"/>
@@ -28,6 +28,7 @@
             android:layout_width="132dp"
             android:layout_height="15dp"
             android:id="@+id/IdeaLike"
+            android:drawableStart="@drawable/ic_likes"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/IdeaText"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
