--- a/app/src/main/res/layout/ideation_list_item.xml
+++ b/app/src/main/res/layout/ideation_list_item.xml
@@ -4,10 +4,12 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content">
+                                                   android:layout_height="wrap_content"
+                                                   android:id="@+id/ideationListParent"
+                                                   android:background="@color/white">
 
     <TextView
-            android:text="TextView"
+            android:text="ideation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
@@ -15,45 +17,71 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:textSize="18sp"/>
+
     <TextView
-            android:background="#A2E088"
-
-            android:text="TextView"
-            android:layout_width="104dp"
-            android:layout_height="18dp"
-            android:id="@+id/tvLikeCount"
-            android:drawableStart="@drawable/ic_likes"
-
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvTitel"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+            android:text="@string/ideation_uitleg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvExtraInfo" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
     />
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvFbCount" app:layout_constraintStart_toEndOf="@+id/tvLikeCount"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintVertical_bias="0.517"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvTwitterCount" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintStart_toEndOf="@+id/tvFbCount"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/IdeaVote"
-            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="ga naar Ideation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/IdeaVote"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitel" android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.18"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/IdeaVote"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            android:background="@color/colorCard">
+
+        <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvFbCount"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                android:layout_marginEnd="8dp"/>
+        <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvTwitterCount"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="1.0"
+                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+                android:text="TextView"
+                android:layout_width="104dp"
+                android:layout_height="18dp"
+                android:id="@+id/tvLikeCount"
+                android:drawableStart="@drawable/ic_likes"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2"/>
+        <androidx.constraintlayout.widget.Guideline
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" app:layout_constraintGuide_begin="136dp"
+                android:id="@+id/guideline2"/>
+        <androidx.constraintlayout.widget.Guideline
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" app:layout_constraintGuide_begin="279dp"
+                android:id="@+id/guideline3"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
