Pre break commit

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,14 +21,15 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_corner" android:layout_marginBottom="32dp"
-            android:layout_marginTop="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
             android:id="@+id/loginLL"
-            app:layout_constraintVertical_bias="0.354" android:elevation="2dp">
+            android:elevation="2dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/loginTitle" app:layout_constraintVertical_bias="0.0">
         <ImageView
                 android:layout_width="50dp"
                 app:srcCompat="@drawable/logo"
@@ -43,6 +44,7 @@
                 android:id="@+id/registerNameEt"
                 android:hint="@string/register_name"
                 android:padding="8dp"
+                android:background="@android:drawable/editbox_background_normal"
                 android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="1dp"
                 tools:ignore="Autofill"/>
         <EditText
@@ -51,6 +53,7 @@
                 android:inputType="date"
                 android:id="@+id/registerBirthdayEt"
                 android:hint="@string/birthday"
+                android:background="@android:drawable/editbox_background_normal"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="1dp"
                 tools:ignore="Autofill"/>
@@ -60,6 +63,7 @@
                 android:inputType="textEmailAddress"
                 android:id="@+id/registerEmailEt"
                 android:hint="@string/login_email"
+                android:background="@android:drawable/editbox_background_normal"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="1dp"
                 tools:ignore="Autofill"/>
@@ -69,6 +73,7 @@
                 android:inputType="textPassword"
                 android:id="@+id/registerPasswordEt"
                 android:hint="@string/password"
+                android:background="@android:drawable/editbox_background_normal"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:elevation="1dp"
                 tools:ignore="Autofill"/>
@@ -80,6 +85,7 @@
                 android:id="@+id/registerConfirmPasswordEt"
                 android:hint="@string/confirm_password"
                 android:padding="8dp"
+                android:background="@android:drawable/editbox_background_normal"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:elevation="1dp"
                 tools:ignore="Autofill"/>
