--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,24 +19,17 @@
             android:textSize="36sp" android:textColor="@android:color/white"
             android:textStyle="bold"/>
 
-    <Button
-            android:text="@string/startup_register_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/loginRegisterBtn"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/loginLL"
-            app:layout_constraintEnd_toEndOf="@+id/loginLL" app:layout_constraintStart_toStartOf="@+id/loginLL"/>
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_corner" android:layout_marginBottom="32dp"
-            android:layout_marginTop="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
             android:id="@+id/loginLL"
-            app:layout_constraintVertical_bias="0.354" android:elevation="2dp">
+            android:elevation="2dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/loginTitle" app:layout_constraintVertical_bias="0.0">
         <ImageView
                 android:layout_width="50dp"
                 app:srcCompat="@drawable/logo"
@@ -50,6 +43,7 @@
                 android:inputType="textEmailAddress"
                 android:id="@+id/loginEmailEt"
                 android:hint="@string/login_email"
+                android:background="@android:drawable/editbox_background_normal"
                 android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="1dp"
                 tools:ignore="Autofill"/>
         <EditText
@@ -59,6 +53,7 @@
                 android:id="@+id/loginPasswordEt"
                 android:hint="@string/password"
                 android:layout_marginTop="16dp"
+                android:background="@android:drawable/editbox_background_normal"
                 android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:elevation="1dp"
                 tools:ignore="Autofill"/>
         <Button
@@ -93,4 +88,14 @@
                 android:layout_marginEnd="16dp" android:layout_marginBottom="24dp" android:elevation="2dp"
                 android:drawableStart="@drawable/ic_microsoft"/>
     </LinearLayout>
+
+    <Button
+            android:text="@string/startup_register_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/loginRegisterBtn"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/loginLL"
+            app:layout_constraintEnd_toEndOf="@+id/loginLL" app:layout_constraintStart_toStartOf="@+id/loginLL"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
