--- a/app/src/main/res/layout/fragment_module_for_phase.xml
+++ b/app/src/main/res/layout/fragment_module_for_phase.xml
@@ -6,5 +6,11 @@
              tools:context=".fragments.ModuleForPhase">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+        <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
+                tools:layout_editor_absoluteX="176dp" android:id="@+id/labelProjectTitle"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
