--- a/app/src/main/res/layout/idea_list_item.xml
+++ b/app/src/main/res/layout/idea_list_item.xml
@@ -7,15 +7,15 @@
                                                    android:layout_height="wrap_content">
 
     <TextView
-            android:text="TextView"
+            android:text="@string/idea_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:background="#A39D9D" android:textSize="18sp" android:textColor="#000000"/>
+            android:background="#A39D9D" android:textSize="18sp" android:textStyle="bold"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/meer_info"
             android:layout_width="0dp"
             android:layout_height="18dp"
             android:id="@+id/IdeaText"
@@ -24,23 +24,15 @@
             android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
             android:textStyle="bold"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/like_count"
             android:layout_width="132dp"
             android:layout_height="15dp"
             android:id="@+id/IdeaLike"
             android:drawableStart="@drawable/ic_likes"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/IdeaText"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
-    <Button
-            android:text="@string/reageer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/IdeaReageer"
-            app:layout_constraintEnd_toStartOf="@+id/IdeaVote"
-            android:layout_marginEnd="12dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/IdeaText" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="@string/stem"
             android:layout_width="wrap_content"
