--- a/app/src/main/res/layout/ideationquestion_list_item.xml
+++ b/app/src/main/res/layout/ideationquestion_list_item.xml
@@ -7,40 +7,32 @@
                                                    android:layout_height="wrap_content">
 
     <TextView
-            android:text="TextView"
+            android:text="@string/iQuestion_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content" android:id="@+id/tvQtitle"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:textStyle="bold"
             app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/meer_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvIDescription"
             app:layout_constraintTop_toBottomOf="@+id/tvQtitle" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-    <Button
-            android:text="Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btIQuest"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvSiteUrl"
-            android:layout_marginBottom="8dp"/>
     <TextView
-            android:text="URL"
+            android:text="@string/url"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvSiteUrl"
             android:autoLink="web"
             android:clickable="true"
+            android:textStyle="italic"
             app:layout_constraintTop_toBottomOf="@+id/tvIDescription" android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:focusable="true"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
