--- a/app/src/main/res/layout/questionnaire_list_item.xml
+++ b/app/src/main/res/layout/questionnaire_list_item.xml
@@ -7,53 +7,44 @@
                                                    android:layout_height="wrap_content">
 
     <TextView
-            android:text="TextView"
+            android:text="@string/questionnaire_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:textSize="18sp"/>
     <TextView
-            android:background="#A2E088"
 
-            android:text="TextView"
-            android:layout_width="104dp"
-            android:layout_height="18dp"
+            android:text="@string/like_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/tvLikeCount"
             android:drawableStart="@drawable/ic_likes"
 
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvTitel"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
-    />
+            app:layout_constraintEnd_toStartOf="@+id/tvFbCount" android:layout_marginEnd="8dp"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/fb_likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvFbCount" app:layout_constraintStart_toEndOf="@+id/tvLikeCount"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintVertical_bias="0.517"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvTitel"
+            app:layout_constraintEnd_toStartOf="@+id/tvTwitterCount" android:layout_marginEnd="8dp"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/twitter_likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvTwitterCount" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintStart_toEndOf="@+id/tvFbCount"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/IdeaVote"
-            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    <Button
-            android:text="vul vragenlijst in"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/IdeaVote"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitel" android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
